# roomrtc

./: .gitignore  Cargo.toml  README.md  room_rtc.conf  roomrtc.conf
.github/workflows/: ci.yml
docs/: Consigna.md  Informe.md
docs/.obsidian/: workspace.json
examples/: otro_ej_rtp.rs  rtp_test.rs
scripts/: clippy.sh  dependencies.sh
src/: attribute.rs  camera.rs  config.rs  ice.rs  lib.rs  main.rs  media_description.rs  sdp.rs
src/client/: client.rs  error.rs  media_pipeline.rs  mod.rs
src/client_server_protocol/: client_message.rs  client_response.rs  mod.rs  server_message.rs  server_response.rs
src/clock/: clock.rs  clock_timer.rs  mod.rs
src/controller/: app_event.rs  app_handler.rs  control.rs  controller.rs  error.rs  mock_utils.rs  mod.rs
src/dtls/: dtls_socket.rs  error.rs  key_manager.rs  mod.rs
src/file/: mod.rs
src/frame_handler/: decoder.rs  encoded_frame.rs  encoder.rs  error.rs  frame.rs  mod.rs
src/ice/: candidate.rs  candidate_pair.rs  candidate_type.rs  connectivity_state.rs  error.rs  ice_agent.rs  ice_errors.rs  mod.rs
src/logger/: mod.rs
src/media/: audio_pipeline.rs  camera.rs  error.rs  media_pipeline.rs  mod.rs
src/rtcp/: error.rs  mod.rs  report_handler.rs  rtcp_connection_handler.rs  rtcp_package.rs  rtcp_packet.rs
src/rtp/: connection_status.rs  error.rs  media_pipeline.rs  mod.rs  receiver.rs  rtp_communicator.rs  rtp_package.rs  rtp_packet.rs  sender.rs
src/sctp_transport/: error.rs  mod.rs  sctp_transport.rs  transport.rs
src/sdp/: attribute.rs  attribute_key.rs  error.rs  (+5 more)
tls_server/: cert.pem  key.pem
(+89 files in other folders)
