[package]
name = "room-rtc"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
chrono = "0.4.42"
penh264 = "0.9.0"
opencv = { version="0.96.0", features = ["clang-runtime"] }
if-addrs = "0.14.0"
rust-ini = "0.21.3"
udp-dtls = "0.1"
openssl = { version = "0.10", features = ["v110"] }
